--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,5 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:${server.port}/eureka/
+      ##defaultZone: http://localhost:${server.port}/eureka/
+      defaultZone: http://172.17.64.10:${server.port}/eureka/
